; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/iio/adc/extr_ad7280a.c_ad7280_timestamp_channel_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/iio/adc/extr_ad7280a.c_ad7280_timestamp_channel_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_chan_spec = type { i32, i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i8, i32, i32 }

@IIO_TIMESTAMP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iio_chan_spec*, i32)* @ad7280_timestamp_channel_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ad7280_timestamp_channel_init(%struct.iio_chan_spec* %0, i32 %1) #0 {
  %3 = alloca %struct.iio_chan_spec*, align 8
  %4 = alloca i32, align 4
  store %struct.iio_chan_spec* %0, %struct.iio_chan_spec** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @IIO_TIMESTAMP, align 4
  %6 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %7 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %6, i32 0, i32 3
  store i32 %5, i32* %7, align 4
  %8 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %9 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %8, i32 0, i32 0
  store i32 -1, i32* %9, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %12 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %14 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %13, i32 0, i32 2
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i8 115, i8* %15, align 4
  %16 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %17 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %16, i32 0, i32 2
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  store i32 64, i32* %18, align 4
  %19 = load %struct.iio_chan_spec*, %struct.iio_chan_spec** %3, align 8
  %20 = getelementptr inbounds %struct.iio_chan_spec, %struct.iio_chan_spec* %19, i32 0, i32 2
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 2
  store i32 64, i32* %21, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
